# HARO-dev

./: .env.example  .gitignore  =6.0.0  CLAUDE.md  HARO-TINS.md  Phase0.md  README.md  haro.spec  pyproject.toml  quickstart-steamdeck.md  start-haro.sh  substrate.md
config/: default.yaml
docs/: claude-code-steam-deck-install-guide.md  deployment.md
scripts/: build_windows.py  haro.service  install.sh  test_api.py
src/haro/: __init__.py  __main__.py
src/haro/audio/: __init__.py  capture.py  feedback.py  playback.py  vad.py  wake.py
src/haro/context/: __init__.py  init.py  knowledge.py  manager.py  session.py
src/haro/core/: __init__.py  agent.py  cache.py  config.py  events.py  lifecycle.py  listen_worker.py  orchestrator.py  parallel_agent.py  speech_worker.py
src/haro/intelligence/: __init__.py  client.py  ollama_client.py  parser.py  prompts.py  router.py
src/haro/speech/: __init__.py  models.py  stt.py  tts.py
src/haro/ui/: __init__.py  console.py
src/haro/utils/: __init__.py  devices.py  logging.py  profiling.py  text_chunker.py
tests/: __init__.py  test_agent.py  test_audio.py  test_config.py  test_context.py  test_context_init.py  test_deployment.py  test_events.py  test_intelligence.py  test_phase7.py  test_speech.py  test_wake.py
